--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
+    "nodejs-unique-numeric-id-generator": "^1.1.0",
     "nodemailer": "^6.9.1",
     "socket.io": "^4.5.4"
   }
