worked on admin game login authentication

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ URI = mongodb+srv://Emeey:1234lanr@cluster0.njaoclp.mongodb.net/mjtriviaquiz?ret
 EmailPass= xahcuisdwtgjfout
 Secret = vue
 GS = gst
+Cloudinary_cloud_name = drgkhxcyq
+ Cloudinary_api_key = 255333637234188
+ Cloudinary_api_secret = ob5bhkq1qQDKnJnWoKYxIMxBRuQ
