fixed some bugs I noticed

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ GS = gst
 Cloudinary_cloud_name = drgkhxcyq
  Cloudinary_api_key = 255333637234188
  Cloudinary_api_secret = ob5bhkq1qQDKnJnWoKYxIMxBRuQ
- SearchIdentification = mTQ
+ SearchIdentification = "mTQ"
