--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.9.0",
     "nodejs-unique-numeric-id-generator": "^1.1.0",
     "nodemailer": "^6.9.1",
+    "short-unique-id": "^4.4.4",
     "socket.io": "^4.5.4"
   }
 }
