--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 2340
-URI = mongodb+srv://Emeey:1234lanr@cluster0.njaoclp.mongodb.net/mjtriviaquiz?retryWrites=true&w=majority
+# URI = mongodb+srv://Emeey:1234lanr@cluster0.njaoclp.mongodb.net/mjtriviaquiz?retryWrites=true&w=majority
+URI = mongodb+srv://EmeeyLanr:ZD6Fk5edpUONVOP2@cluster0.dirusb6.mongodb.net/
 EmailPass= xahcuisdwtgjfout
 Secret = vue
 GS = gst
