--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It's trivia quiz app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "oyelowo emmanuel",
   "license": "ISC",
@@ -15,7 +16,7 @@
     "express": "^4.18.2",
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
+    "mongoose": "^7.3.1",
     "nodejs-unique-numeric-id-generator": "^1.1.0",
     "nodemailer": "^6.9.1",
     "short-unique-id": "^4.4.4",
