worked on the delete controller and fixed some bugs

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-Cloudinary_cloud_name = 
-Cloudinary_api_key =
-Cloudinary_api_secret = 
+Cloudinary_cloud_name = "me-pays"
+Cloudinary_api_key = "869757644521464"
+Cloudinary_api_secret = "CXijbWv0S0Ijuys6tZwlxg4HfkI"
 Secret = By65J85dfIioKgf
 GS = XcFBgJuYt88Yu87
 URI = "mongodb://0.0.0.0:27017/quiz"
 Email = "emeeylanr04@gmail.com"
 EmailPass = "wxksatgzafmqwtoq"
 PORT = 2340
+SearchIdentification = "mTQ"
