--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ Cloudinary_api_secret = "CXijbWv0S0Ijuys6tZwlxg4HfkI"
 Secret = By65J85dfIioKgf
 GS = XcFBgJuYt88Yu87
 
-URI = "mongodb+srv://EmeeyLanr:**1234Lanr@cluster0.dirusb6.mongodb.net/quiz?retryWrites=true&w=majority"
-# URI = "mongodb://0.0.0.0:27017/quiz"
+# URI = "mongodb+srv://EmeeyLanr:**1234Lanr@cluster0.dirusb6.mongodb.net/quiz?retryWrites=true&w=majority"
+URI = "mongodb://0.0.0.0:27017/quiz"
 Email = "emeeylanr04@gmail.com"
 EmailPass = "wxksatgzafmqwtoq"
 PORT = 2340
